kubernetes/apps/kube-system/cilium/app/envoy-securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-ui-oidc
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-frontend
  oidc:
    provider:
      issuer: "https://authentik.${SECRET_DOMAIN}/application/o/hubble"
    clientID: "hubble-envoy"
    clientSecret:
      name: authentik-hubble-oidc
    redirectURL: "https://hubble.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/oauth2/logout"
    scopes:
      - openid
      - profile
      - email
